--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,7 @@
 .card-body {
   height: 150px;
   max-height: 150px;
+  box-shadow: 2px 10px 6px -10px;
 }
 
 .property-type {
@@ -27,4 +28,9 @@
 
 img {
   max-height: 200px;
+}
+
+
+strong {
+  box-shadow: 2px 4px 6px rgb(24, 24, 86);
 }
